fix(colors): change primary color

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,8 +20,8 @@ body {
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: #669396;
-    --dark-green: #1D6579;
+    --green: #669396;
+    --primary: #1D6579;
     --yellow: #FDF7E9;
     --white: #F1F4F4;
     --dark: #282F30;
