fix(login-page): improve margins and responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,10 @@ body {
   @apply min-h-screen py-8 px-4 sm:px-6 lg:px-8;
 }
 
+.container-center {
+  @apply max-w-7xl mx-auto;
+}
+
 input[type="color"],
 input[type="date"],
 input[type="datetime"],
